[tool.poetry]
name = "BBreaker"
version = "0.2.1"
description = "Brick Breaker game in Pygame"
authors = ["JO <olesjakubb@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6."
pygame = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.6"
pyinstaller = "^3.4"

[tool.poetry.scripts]
bbreaker = 'bbreaker.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
